# LMM_Robustness

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
lmm_robustness/algorithms/: __init__.py  gradient_ascent_attack.py  my_attack.py  my_rounding_attack.py
lmm_robustness/architecture/: center.py  phi_4_multimodal.py  simple_conv_net.py
lmm_robustness/data/: __init__.py  batch.py  cifar10.py  split_deterministically.py
lmm_robustness/scripts/: train_conv_net.py
lmm_robustness/scripts/evaluate/: conv_robustness.py  lmm_accuracy.py  lmm_adversarial_robustness.py
lmm_robustness/scripts/plot/: conv_robustness.py  lmm_adversarial_predictions.py  lmm_adversarial_robustness.py  misclassification.py
lmm_robustness/scripts/save/: lmm_adversarial_predictions.py  lmm_mistakes.py
src/: cli.py
src/architecture/: phi_4_multimodal.py  qwen3.py  qwen3_og.py
src/scripts/: train_conv_net.py
src/scripts/evaluate/: conv_robustness.py  lmm_accuracy.py  lmm_adversarial_robustness.py
src/scripts/plot/: conv_robustness.py  lmm_adversarial_predictions.py  lmm_adversarial_robustness.py
src/scripts/save/: lmm_adversarial_predictions.py  lmm_mistakes.py
